--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,17 @@ authors = ["Daniel Serrano <dserranog@unal.edu.co>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.13"
 requests = "^2.32.3"
 bs4 = "^0.0.2"
 scrapy = "^2.12.0"
 ruff = "^0.8.4"
+chromadb-client = "^0.5.23"
+langchain-chroma = "^0.1.4"
+langchain-ollama = "^0.2.2"
+unstructured = {extras = ["md"], version = "^0.16.11"}
+nltk = "^3.9.1"
+langchain-community = "^0.3.13"
 
 
 [build-system]
