--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ unstructured = {extras = ["md"], version = "^0.16.11"}
 nltk = "^3.9.1"
 langchain-community = "^0.3.13"
 sentence-transformers = "^3.3.1"
+langchain-huggingface = "^0.1.2"
 
 
 [build-system]
