--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ langchain-community = "^0.3.13"
 sentence-transformers = "^3.3.1"
 langchain-huggingface = "^0.1.2"
 langfuse = "^2.57.5"
+langgraph = "^0.2.61"
 
 
 [build-system]
