--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,15 @@ sentence-transformers = "^3.3.1"
 langchain-huggingface = "^0.1.2"
 langfuse = "^2.57.5"
 langgraph = "^0.2.61"
+deepeval = "^2.1.7"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+select = ["I", "F"]
+fix = true
+fixable = ["I"]
+line-length = 88
