--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ python = ">=3.11,<3.13"
 requests = "^2.32.3"
 bs4 = "^0.0.2"
 scrapy = "^2.12.0"
-ruff = "^0.8.4"
 chromadb-client = "^0.5.23"
 langchain-chroma = "^0.1.4"
 langchain-ollama = "^0.2.2"
@@ -22,6 +21,9 @@ langchain-huggingface = "^0.1.2"
 langfuse = "^2.57.5"
 langgraph = "^0.2.61"
 deepeval = "^2.1.7"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.8.4"
 
 
 [build-system]
