--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ sentence-transformers = "^3.3.1"
 langchain-huggingface = "^0.1.2"
 langfuse = "^2.57.5"
 langgraph = "^0.2.61"
-deepeval = "^2.1.7"
+deepeval = "2.1.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.4"
