refactor: use frontmatter to load documents and add metadata

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,13 @@ scrapy = "^2.12.0"
 chromadb-client = "^0.5.23"
 langchain-chroma = "^0.1.4"
 langchain-ollama = "^0.2.2"
-unstructured = {extras = ["md"], version = "^0.16.11"}
 nltk = "^3.9.1"
-langchain-community = "^0.3.13"
 sentence-transformers = "^3.3.1"
 langchain-huggingface = "^0.1.2"
 langfuse = "^2.57.5"
 langgraph = "^0.2.61"
 fastapi = "^0.115.7"
+python-frontmatter = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 deepeval = "2.1.7"
